# Mindrian_Minto-MCP

./: .env.example  .gitignore  Example Strategy Brief  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
examples/: example_usage.py
reasoning/: __init__.py  critique.py  domain_detector.py  execution.py  mece_generator.py  mece_validator.py  plan.py  synthesis.py
tests/: test_server.py
