[project]
name = "minto-pyramid-mcp"
version = "1.0.0"
description = "Sequential Thinking MCP Server for Minto Pyramid Analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = [
    "mcp",
    "minto-pyramid",
    "sequential-thinking",
    "strategic-analysis",
    "fastmcp"
]

dependencies = [
    "fastmcp>=2.10.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.fastmcp]
name = "Minto Pyramid Analyzer"
version = "1.0.0"
description = "Advanced Minto pyramid analysis with sequential thinking"

[tool.fastmcp.server]
transport = "stdio"
host = "0.0.0.0"
port = 8000

[tool.fastmcp.features]
streaming = false
session_management = true
stateless_mode = false
